<resources>
    <string name="app_name">Eat_It_</string>
    <string name="name_app">eat it demo</string>
    <string name="register_text">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="continue_text">Continue</string>
    <string name="name_user">Name</string>
    <string name="address_user">Address</string>
    <string name="title_activity_home">ActivityHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="popular_categories">Popular categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="popular_categori">Popular</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_food_list">FoodList</string>
    <string name="menu_food_detail">Food detail</string>
    <string name="food_name">Food name</string>
    <string name="description">Description</string>
    <string name="show_comment">Show Comment</string>
    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="cart">Cart</string>
    <string name="action_clear_cart">Clear cart</string>
    <string name="sign_out">Sign out</string>
    <string name="view_orders">View orders</string>
    <string name="menu_search">Search</string>
    <string name="update_info">Update info</string>
    <string name="title_activity_tracking_order_actitity">Map</string>
    <string name="menu_restaurant">Restaurant</string>
</resources>